--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <!--
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
+  -->
   <title>TODO Tracker -- List Branches</title>
 </head>
 <body ng-app="todoTrackerApp">
@@ -32,7 +35,7 @@
         <b>Repository:</b>
       </div>
       <div class="col-md-11">
-        {{repo.repo_name}}
+        {{repo.Repository}}
       </div>
     </div>
 
@@ -41,20 +44,26 @@
       </div>
       <div class="col-md-11">
         <div class="row header-bar-text">
-          <div class="col-md-4">
+          <div class="col-md-3">
             <b>Branch</b>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-4">
+            Revision
+          </div>
+          <div class="col-md-5">
             Last Modified
           </div>
         </div>
         <!-- List each branch -->
-        <div class="row alternate_row" ng-repeat="branch in repo.branches">
-          <div class="col-md-4">
-            <a href="{{branch.link}}">{{branch.branch_name}}</a>
+        <div class="row alternate_row" ng-repeat="branch in repo.Branches">
+          <div class="col-md-3">
+            <a href="xxxx">{{branch.Branch}}</a>
           </div>
-          <div class="col-md-8">
-            {{branch.last_modified}}
+          <div class="col-md-4">
+            {{branch.Revision}}
+          </div>
+          <div class="col-md-5">
+            {{branch.LastModified}} by {{branch.LastModifiedBy}}
           </div>
         </div>
       </div>
