Add 'TODO Details' page

--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -10,7 +10,7 @@
   <!--
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
   -->
-  <title>TODO Tracker -- List Branches</title>
+  <title>TODO Tracker -- Branche List</title>
 </head>
 <body ng-app="todoTrackerApp">
   <!-- or "container-fluid" -->
@@ -24,7 +24,7 @@
     </div>
     <div class="row header-bar">
       <div class="col-md-12">
-        <h4>List Branches</h4>
+        <h4>Branche List</h4>
       </div>
     </div>
   </div>
