--- a/src/ui/list_todos.html
+++ b/src/ui/list_todos.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="todo_tracker.css" />
+  <link rel="stylesheet" href="todo_tracker.css" type="text/css" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Latest compiled and minified CSS -->
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-md-12">
         <hr>
-        <h1 class="text-center csblue">TODO Tracker</h1>
+        <h1 class="text-center csblue"><a href="/">TODO Tracker</a></h1>
       </div>
     </div>
     <div class="row header-bar">
