--- a/src/ui/todo_details.html
+++ b/src/ui/todo_details.html
@@ -29,6 +29,10 @@
     </div>
   </div>
   <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+      </div>
+    </div>
     <!-- List each detail info-->
     <div class="row alternate_row" ng-repeat="detail in todoDetails">
       <div class="col-md-2">
