--- a/src/ui/list_todos.html
+++ b/src/ui/list_todos.html
@@ -39,41 +39,48 @@
       </div>
     </div>
 
-    <div class="row">
+
+
+    <div class="row header-bar-text">
       <div class="col-md-1">
       </div>
-      <div class="col-md-11">
-        <div class="row header-bar-text">
-          <div class="col-md-5">
-            <b>File Name</b>
-          </div>
-          <div class="col-md-1">
-           Line
-          </div>
-          <div class="col-md-6">
-            Content
-          </div>
-        </div>
-        <!-- List each TODO -->
-        <div class="row alternate_row" ng-repeat="oneTodo in revision.todos">
-          <div class="col-md-5">
-            {{oneTodo.fileName}}
-          </div>
-          <div class="col-md-1">
-            <div class="row">
-              <div class="col-md-8 text-right">
-                <a href="/browse?revision={{revision.revision}}&fileName={{oneTodo.fileName}}">{{oneTodo.lineNumber}}</a>
-              </div>
-              <div class="col-md-4">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <a href="todo_details.html#?revid={{revision.revision}}&fn={{oneTodo.fileName}}&ln={{oneTodo.lineNumber}}">{{oneTodo.content}}</a>
-          </div>
-        </div>
+      <div class="col-md-4">
+        <b>File Name</b>
+      </div>
+      <div class="col-md-1">
+        Line
+      </div>
+      <div class="col-md-6">
+        Content
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+      </div>
+    </div>
+    <div class="row alternate_row" ng-repeat="oneTodo in revision.todos">
+      <div class="col-md-1">
+        <span class="glyphicon glyphicon-file pull-right" style="color:#555555"></span>
+      </div>
+        <div class="col-md-4">
+          {{oneTodo.fileName}}
+        </div>
+        <div class="col-md-1">
+          <div class="row">
+            <div class="col-md-8 text-right">
+              <a href="/browse?revision={{revision.revision}}&fileName={{oneTodo.fileName}}">{{oneTodo.lineNumber}}</a>
+            </div>
+            <div class="col-md-4">
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <a href="todo_details.html#?revid={{revision.revision}}&fn={{oneTodo.fileName}}&ln={{oneTodo.lineNumber}}">{{oneTodo.content}}</a>
+        </div>
+    </div>
+
+
+
   </div>
   </div>
   <script src="todo_tracker.js"></script>
