Added TODOs for the next steps of the todo list page

--- a/src/ui/list_todos.html
+++ b/src/ui/list_todos.html
@@ -28,6 +28,7 @@
       </div>
     </div>
   </div>
+  <!-- TODO: Add a view that is based on file paths instead of revisions -->
   <div class="container" ng-repeat="revision in revisions">
     <!-- Header to show branches -->
     <div class="row header-bar-lighter">
@@ -62,12 +63,14 @@
       <div class="col-md-1">
         <span class="glyphicon glyphicon-file pull-right" style="color:#555555"></span>
       </div>
+        <!-- TODO: Make the column longer than the longest filename we have to display -->
         <div class="col-md-4">
           {{oneTodo.fileName}}
         </div>
         <div class="col-md-1">
           <div class="row">
             <div class="col-md-8 text-right">
+              <!-- TODO: Include the line number in the source browse link -->
               <a href="/browse?revision={{revision.revision}}&fileName={{oneTodo.fileName}}">{{oneTodo.lineNumber}}</a>
             </div>
             <div class="col-md-4">
@@ -86,4 +89,3 @@
   <script src="todo_tracker.js"></script>
 </body>
 </html>
-
