Added a TODO for generating the branch diff

--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -39,6 +39,7 @@
       </div>
     </div>
 
+    <!-- TODO: Add the ability to generate a diff of TODOs between two branches. --->
     <div class="row">
       <div class="col-md-1">
       </div>
