--- a/src/ui/list_todos.html
+++ b/src/ui/list_todos.html
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <!-- TODO: Add a view that is based on file paths instead of revisions -->
+  <!-- TODO(kleung): Add a view that is based on file paths instead of revisions -->
   <div class="container" ng-repeat="revision in revisions">
     <!-- Header to show branches -->
     <div class="row header-bar-lighter">
