some cleanups, and claim several TODOs

--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -5,11 +5,7 @@
   <link rel="stylesheet" href="todo_tracker.css" type="text/css" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Latest compiled and minified CSS -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-  <!--
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
-  -->
   <title>TODO Tracker -- Branch List</title>
 </head>
 <body ng-app="todoTrackerApp">
@@ -39,7 +35,7 @@
       </div>
     </div>
 
-    <!-- TODO: Add the ability to generate a diff of TODOs between two branches. --->
+    <!-- TODO(weizheng): Add the ability to generate a diff of TODOs between two branches. --->
     <div class="row">
       <div class="col-md-1">
       </div>
