add by file view

--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -61,7 +61,9 @@
             {{branch.branch}}
           </div>
           <div class="col-md-4">
-            <a href="list_todos.html#?revid={{branch.revision}}">{{branch.revision}}</a>
+            {{branch.revision}} <br>
+            <a href="list_todos.html#?revid={{branch.revision}}">[list by revision]</a>
+            <a href="list_todos_paths.html#?revid={{branch.revision}}">[list by file]</a>
           </div>
           <div class="col-md-5">
             <div ng-show="branch.lastModified != null && branch.lastModified != ''">
