--- a/src/ui/list_todos_paths.html
+++ b/src/ui/list_todos_paths.html
@@ -65,6 +65,7 @@
         <div class="col-md-4">
           {{oneTodo.revision}}
         </div>
+        <!-- TODO(kleung): Fix link to details page. -->
         <div class="col-md-1">
           <div class="row">
             <div class="col-md-8 text-right">
