--- a/src/ui/todo_details.html
+++ b/src/ui/todo_details.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     <!-- List each detail info-->
-    <!-- TODO: Treat the context specially, and include buttons to increase the number of lines above/below the todo to display -->
+    <!-- TODO(kleung): Treat the context specially, and include buttons to increase the number of lines above/below the todo to display -->
     <div class="row alternate_row" ng-repeat="detail in todoDetails">
       <div class="col-md-2">
         {{detail.key}}
