--- a/src/ui/todo_details.html
+++ b/src/ui/todo_details.html
@@ -16,11 +16,11 @@ limitations under the License.
 -->
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="todo_tracker.css" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <title>TODO Tracker -- TODO Details</title>
 </head>
 <body ng-app="todoTrackerApp">
