UI changes required to finish the support for multiple repos: 1. Wire the "revision" parameter through everywhere (and change the inconsistent "revid" and "id" parameters to be "revision" instead). 2. Add a "/ui/list_repos.html" page which lists the repos. 3. Change the references to "Repositories" in the "list_branches.html" page to the more-accurately-named "Remotes". 4. Added code to the main method to find all git repos under the current directory, and use them for constructing the dashboard (instead of assuming that the current directory is a git repo).
As part of this change I also noticed some minor nits that I went ahead and fixed:
1. Parts of the Javascript code that could use "for(var ... in ...)" loops instead of "for(...;...;...)" loops.
2. Some inconsistencies between the "list_todos.html" and "list_todos_paths.html" files.

--- a/src/ui/list_branches.html
+++ b/src/ui/list_branches.html
@@ -39,14 +39,19 @@ limitations under the License.
       </div>
     </div>
   </div>
-  <div class="container" ng-repeat="repo in repositories">
+  <div class="container" ng-repeat="remote in remotes">
     <!-- Header to show branches -->
-    <div class="row header-bar-lighter">
+    <div class="row header-bar-lighter" ng-if="remote.name">
       <div class="col-md-1">
-        <b>Repository:</b>
+        <b>Remote:</b>
       </div>
       <div class="col-md-11">
-        {{repo.repository}}
+        {{remote.name}}
+      </div>
+    </div>
+    <div class="row header-bar-lighter" ng-if="!remote.name">
+      <div class="col-md-1">
+        <b>Local:</b>
       </div>
     </div>
 
@@ -67,14 +72,14 @@ limitations under the License.
           </div>
         </div>
         <!-- List each branch -->
-        <div class="row alternate_row" ng-repeat="branch in repo.branches">
+        <div class="row alternate_row" ng-repeat="branch in remote.branches">
           <div class="col-md-3">
             {{branch.branch}}
           </div>
           <div class="col-md-4">
             {{branch.revision}} <br>
-            <a href="list_todos_paths.html#?revid={{branch.revision}}">[list by file]</a>
-            <a href="list_todos.html#?revid={{branch.revision}}">[list by revision]</a>
+            <a href="list_todos_paths.html#?repo={{branch.repo}}&revision={{branch.revision}}">[list by file]</a>
+            <a href="list_todos.html#?repo={{branch.repo}}&revision={{branch.revision}}">[list by revision]</a>
           </div>
           <div class="col-md-5">
             <div ng-show="branch.lastModified != null && branch.lastModified != ''">
