--- a/src/ui/list_todos_paths.html
+++ b/src/ui/list_todos_paths.html
@@ -83,15 +83,15 @@ limitations under the License.
         <div class="col-md-1">
           <div class="row">
             <div class="col-md-8 text-right">
-              <!-- TODO: Include the line number in the source browse link -->
-              <a href="/browse?revision={{oneTodo.revision}}&fileName={{oneTodo.fileName}}">{{oneTodo.lineNumber}}</a>
+              <a href="/browse?repo={{oneTodo.repo}}&revision={{oneTodo.revision}}&fileName={{oneTodo.fileName}}&lineNumber={{oneTodo.lineNumber}}">
+                {{oneTodo.lineNumber}}</a>
             </div>
             <div class="col-md-4">
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <a href="todo_details.html#?revid={{oneTodo.revision}}&fn={{oneTodo.fileName}}&ln={{oneTodo.lineNumber}}">{{oneTodo.content}}</a>
+          <a href="todo_details.html#?repo={{oneTodo.repo}}&revision={{oneTodo.revision}}&fn={{oneTodo.fileName}}&ln={{oneTodo.lineNumber}}">{{oneTodo.content}}</a>
         </div>
     </div>
 
